--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,11 @@ body {
   background-position: top center;
 }
 
+.reg {
+  display: flex;
+  align-items: center;
+}
+
 .reg__btn_log {
   color: #fff;
   margin-right: 19px;
@@ -296,6 +301,7 @@ body {
 
   .reg {
     margin-bottom: 120px;
+    justify-content: center;
   }
 
   .hero {
@@ -335,6 +341,10 @@ body {
   .navigation {
     flex-direction: row-reverse;
     margin-bottom: 152px;
+  }
+
+  .reg {
+    justify-content: flex-end;
   }
 
   .hero {
